--- a/mokepon.html
+++ b/mokepon.html
@@ -61,19 +61,16 @@
         <button id="boton-tierra" class="btn-attack">Tierra 🌱</button>
       </div>
 
-      <div>
-        <section id="mensajes"></section>
-
-        <div id="resultado"></div>
-        <div id="ataques-del-jugador"></div>
-        <div id="ataques-del-enemigo"></div>
-
+      <div id="mensajes">
+        <p id="resultado">Mucha suerte!</p>
         <section id="reiniciar">
           <button id="boton-reiniciar">Reiniciar</button>
         </section>
       </div>
 
       <div>
+        <div id="ataques-del-jugador"></div>
+        <div id="ataques-del-enemigo"></div>
         <p>
           Tu mascota <span id="mascota-jugador"></span> tiene
           <span id="vidas-jugador">3</span> vidas
