--- a/mokepon.html
+++ b/mokepon.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MOKEPON!</title>
     <script src="./js/mokepon.js"></script>
     <link rel="stylesheet" href="./styles.css" />
@@ -55,7 +56,7 @@
 
       <h2 class="subtitulo">Elige tu ataque:</h2>
 
-      <div>
+      <div class="acciones-ataque">
         <button id="boton-fuego" class="btn-attack">Fuego 🔥</button>
         <button id="boton-agua" class="btn-attack">Agua 💧</button>
         <button id="boton-tierra" class="btn-attack">Tierra 🌱</button>
@@ -68,17 +69,17 @@
         </section>
       </div>
 
-      <div>
-        <div id="ataques-del-jugador"></div>
-        <div id="ataques-del-enemigo"></div>
-        <p>
-          Tu mascota <span id="mascota-jugador"></span> tiene
-          <span id="vidas-jugador">3</span> vidas
-        </p>
-        <p>
-          La mascota <span id="mascota-enemigo"></span> del enemigo tiene
-          <span id="vidas-enemigo">3</span> vidas
-        </p>
+      <div class="ataques">
+        <div class="ataques-jugador">
+          <p id="vidas-jugador">3</p>
+          <p id="mascota-jugador"></p>
+          <div id="ataques-del-jugador"></div>
+        </div>
+        <div class="ataques-enemigo">
+          <p id="vidas-enemigo">3</p>
+          <p id="mascota-enemigo"></p>
+          <div id="ataques-del-enemigo"></div>
+        </div>
       </div>
     </section>
   </body>
