Declaración lenta de variables

--- a/mokepon.html
+++ b/mokepon.html
@@ -12,40 +12,7 @@
 
       <h2 class="subtitulo">Elige tu mascota:</h2>
 
-      <div class="card-container">
-        <div>
-          <input type="radio" name="mascota" id="hipodoge" />
-          <label class="tarjeta-de-mokepon" for="hipodoge">
-            <p>Hipodoge</p>
-            <img
-              src="./assets/mokepons_mokepon_hipodoge_attack.png"
-              alt="Mokepon estilo agua"
-            />
-          </label>
-        </div>
-
-        <div>
-          <input type="radio" name="mascota" id="capipepo" />
-          <label class="tarjeta-de-mokepon" for="capipepo">
-            <p>Capipepo</p>
-            <img
-              src="./assets/mokepons_mokepon_capipepo_attack.png"
-              alt="Mokepon estilo tierra"
-            />
-          </label>
-        </div>
-
-        <div>
-          <input type="radio" name="mascota" id="ratigueya" />
-          <label class="tarjeta-de-mokepon" for="ratigueya">
-            <p>Ratigueya</p>
-            <img
-              src="./assets/mokepons_mokepon_ratigueya_attack.png"
-              alt="Mokepon estilo fuego"
-            />
-          </label>
-        </div>
-      </div>
+      <div id="contenedor-tarjetas" class="card-container"></div>
 
       <button id="boton-mascota">Seleccionar</button>
     </section>
