Eventos de click dinámicos

--- a/mokepon.html
+++ b/mokepon.html
@@ -22,10 +22,10 @@
 
       <h2 class="subtitulo">Elige tu ataque:</h2>
 
-      <div class="acciones-ataque">
-        <button id="boton-fuego" class="btn-attack">Fuego 🔥</button>
+      <div id="acciones-container" class="acciones-ataque">
+        <!-- <button id="boton-fuego" class="btn-attack">Fuego 🔥</button>
         <button id="boton-agua" class="btn-attack">Agua 💧</button>
-        <button id="boton-tierra" class="btn-attack">Tierra 🌱</button>
+        <button id="boton-tierra" class="btn-attack">Tierra 🌱</button> -->
       </div>
 
       <div id="mensajes">
