--- a/mokepon.html
+++ b/mokepon.html
@@ -22,11 +22,7 @@
 
       <h2 class="subtitulo">Elige tu ataque:</h2>
 
-      <div id="acciones-container" class="acciones-ataque">
-        <!-- <button id="boton-fuego" class="btn-attack">Fuego 🔥</button>
-        <button id="boton-agua" class="btn-attack">Agua 💧</button>
-        <button id="boton-tierra" class="btn-attack">Tierra 🌱</button> -->
-      </div>
+      <div id="acciones-container" class="acciones-ataque"></div>
 
       <div id="mensajes">
         <p id="resultado">Mucha suerte!</p>
@@ -37,12 +33,12 @@
 
       <div class="ataques">
         <div class="ataques-jugador">
-          <p id="vidas-jugador">3</p>
+          <p id="vidas-jugador"></p>
           <p id="mascota-jugador"></p>
           <div id="ataques-del-jugador"></div>
         </div>
         <div class="ataques-enemigo">
-          <p id="vidas-enemigo">3</p>
+          <p id="vidas-enemigo"></p>
           <p id="mascota-enemigo"></p>
           <div id="ataques-del-enemigo"></div>
         </div>
