Moviendo a capipepo hacia la derecha

--- a/mokepon.html
+++ b/mokepon.html
@@ -17,6 +17,23 @@
       <button id="boton-mascota">Seleccionar</button>
     </section>
 
+    <section id="ver-mapa">
+      <h1 class="titulo">Recorre el mapa con tu mokepon</h1>
+      <canvas id="mapa"> </canvas>
+      <button onmousedown="moverArriba()" onmouseup="detenerMovimiento">
+        Arriba
+      </button>
+      <button onmousedown="moverAbajo()" onmouseup="detenerMovimiento">
+        Abajo
+      </button>
+      <button onmousedown="moverIzquierda()" onmouseup="detenerMovimiento">
+        izquierda
+      </button>
+      <button onmousedown="moverDerecha()" onmouseup="detenerMovimiento">
+        Derecha
+      </button>
+    </section>
+
     <section id="seleccionar-ataque">
       <h1 class="titulo">MOKEPON! 🔥💧🌱</h1>
 
