Moviendo hacia todas las direcciones

--- a/mokepon.html
+++ b/mokepon.html
@@ -20,16 +20,16 @@
     <section id="ver-mapa">
       <h1 class="titulo">Recorre el mapa con tu mokepon</h1>
       <canvas id="mapa"> </canvas>
-      <button onmousedown="moverArriba()" onmouseup="detenerMovimiento">
+      <button onmousedown="moverArriba()" onmouseup="detenerMovimiento()">
         Arriba
       </button>
-      <button onmousedown="moverAbajo()" onmouseup="detenerMovimiento">
+      <button onmousedown="moverAbajo()" onmouseup="detenerMovimiento()">
         Abajo
       </button>
-      <button onmousedown="moverIzquierda()" onmouseup="detenerMovimiento">
+      <button onmousedown="moverIzquierda()" onmouseup="detenerMovimiento()">
         izquierda
       </button>
-      <button onmousedown="moverDerecha()" onmouseup="detenerMovimiento">
+      <button onmousedown="moverDerecha()" onmouseup="detenerMovimiento()">
         Derecha
       </button>
     </section>
